@@ -1,3 +1,8 @@
+2023-04-19  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/sabr.cpp (swptnVolCube): Update from SwaptionVolCube1 to
+	SabrSwaptionVolatilityCube
+
 2023-01-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor release
